@startuml
'https://plantuml.com/class-diagram

class MecanumDrive
class TwoDeadWheelLocalizer
interface Localizer
class Params
class Params_Test

Localizer <|-- TwoDeadWheelLocalizer
MecanumDrive <|-- PinpointDrive

MecanumDrive - TwoDeadWheelLocalizer : uses >
Params - MecanumDrive : configures >
Params_Test - MecanumDrive : configures >

@enduml